# nihongo-memo

./: README.md  main.js  package-lock.json  package.json  wrangler.toml
.github/workflows/: deploy.yml  release.yml
functions/api/: admin.js  auth.js  progress.js
src/: admin.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src/data/: kana.json  katakana-words.json  vocabulary-organized.json  vocabulary.json  wiktionary-words.json  word-details.json
src/scripts/: app.js  botguard.js  data.js  storage.js
src/styles/: main.css
